Updated GH Actions to use shared/common libraries

--- a/.github/workflows/github_repo_actions_nodejs.yaml
+++ b/.github/workflows/github_repo_actions_nodejs.yaml
@@ -8,6 +8,7 @@ on:
       - "etl_pipelines_nodejs/github_node/*"
       - "etl_pipelines_nodejs/github_node/src/*"
       - "etl_pipelines_nodejs/github_node/utils/*"
+      - "etl_pipelines_nodejs/common/*"
 
 jobs:
   docker:
@@ -27,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./etl_pipelines_nodejs/github_node/
+          context: ./etl_pipelines_nodejs/
           file: ./etl_pipelines_nodejs/github_node/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
