Refactoring to use common/library files

--- a/etl_pipelines_nodejs/github_node/Dockerfile
+++ b/etl_pipelines_nodejs/github_node/Dockerfile
@@ -2,15 +2,17 @@ FROM node:18-alpine3.18
 
 WORKDIR /app
 
-COPY package*.json ./
-COPY tsconfig.json ./
+COPY ./github_node/package*.json ./
+COPY ./github_node/tsconfig.json ./
 
 RUN npm ci
 
 
-COPY ./utils ./utils
-COPY ./src ./src
+COPY ./github_node ./github_node
+COPY ./github_node/utils ./github_node/utils
+COPY ./github_node/src ./github_node/src
+COPY ./common ./common 
 
-RUN npx tsc ./src/index.ts
+RUN npx tsc ./github_node/src/index.ts
 
-CMD [ "node", "src/index.js" ]
+CMD [ "node", "/app/github_node/src/index.js" ]
