--- a/etl_pipelines_nodejs/github_node/package.json
+++ b/etl_pipelines_nodejs/github_node/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github_actions_tracking",
   "version": "1.0.0",
+  "description": "",
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
@@ -28,10 +29,10 @@
   },
   "dependencies": {
     "follow-redirects": ">=1.15.6",
+    "ajv": "^8.12.0",
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.6.7",
     "octokit": "^3.1.2",
     "tsx": "^4.7.1"
-  },
-  "description": ""
+  }
 }
