--- a/etl_pipelines_nodejs/github_node/package.json
+++ b/etl_pipelines_nodejs/github_node/package.json
@@ -15,7 +15,6 @@
   "author": "Markham Lee",
   "license": "MIT",
   "devDependencies": {
-    "follow-redirects": ">=1.15.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.21",
@@ -23,9 +22,9 @@
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
+    "follow-redirects": ">=1.15.6",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.2"
   },
   "dependencies": {
     "follow-redirects": ">=1.15.6",
