fixing small path error

--- a/IoT/air_quality/Dockerfile
+++ b/IoT/air_quality/Dockerfile
@@ -8,4 +8,4 @@ COPY ./air_quality ./
 
 RUN pip install -r /iot_sensors/requirements.txt
 
-CMD python3 iot_sensors/main.py
+CMD python3 /iot_sensors/main.py
