--- a/.github/workflows/yield_curve_image_build.yaml
+++ b/.github/workflows/yield_curve_image_build.yaml
@@ -6,7 +6,7 @@ on:
       - "main"
     paths:
       - "etl_pipelines/etl_library/*"
-      - "etl_pipelines/yield_curve_data/*"
+      - "etl_pipelines/yield_curve_data_load/*"
 
 jobs:
   docker:
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./etl_pipelines/
-          file: ./etl_pipelines/yield_curve_data/Dockerfile
+          file: ./etl_pipelines/yield_curve_data_load/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: markhamlee/yieldcurve:latest
+          tags: markhamlee/yieldcurve_load:latest
