Updated k8s deployment file with Slack Alert Webhook

--- a/etl_pipelines/yield_curve_data_load/values.yaml
+++ b/etl_pipelines/yield_curve_data_load/values.yaml
@@ -42,6 +42,12 @@ spec:
                   key: POSTGRES_PASSWORD
                   name: postgres-secrets
                   optional: false
+            - name: ALERT_WEBHOOK
+              valueFrom:
+                secretKeyRef:
+                  key: WEBHOOK_ETL_ALERTS
+                  name: slack-webhook-pipeline-failures
+                  optional: false
             - name: DASHBOARD_DB
               valueFrom:
                 configMapKeyRef:
