Refactoring to used shared/private library for common functions

--- a/etl_pipelines/yield_curve_prepare/Dockerfile
+++ b/etl_pipelines/yield_curve_prepare/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:alpine as build
 
 COPY ./etl_library ./etl_library
+COPY ./yield_curve_library ./yield_curve_library
 
 WORKDIR /etl
 
 COPY ./yield_curve_prepare ./
 
-RUN pip install -r /etl/requirements.txt
+RUN pip install -r /yield_curve_library/requirements.txt
 
 CMD python3 /etl/main.py
