updates to build using private libraries/common files

--- a/.github/workflows/yield_curve_prepare_plot_build.yaml
+++ b/.github/workflows/yield_curve_prepare_plot_build.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - "etl_pipelines/etl_library/*"
       - "etl_pipelines/yield_curve_prepare/*"
+      - "etl_pipelines/yield_curve_library/*"
 
 jobs:
   docker:
