--- a/.github/workflows/yield_curve_image_build.yaml
+++ b/.github/workflows/yield_curve_image_build.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       - "etl_pipelines/etl_library/*"
       - "etl_pipelines/yield_curve_data_load/*"
+      - "etl_pipelines/yield_curve_library/*"
 
 jobs:
   docker:
