Upgrading Dockerfiles - moving to multi-stage builds

--- a/etl_pipelines/github_actions_data/Dockerfile
+++ b/etl_pipelines/github_actions_data/Dockerfile
@@ -1,4 +1,20 @@
-FROM python:3.12.2-slim as build
+# Build Stage
+
+FROM python:alpine as builder
+
+WORKDIR /app
+
+COPY github_library/requirements.txt .
+
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
+
+# Final Stage
+FROM python:alpine
+
+COPY --from=builder /app/wheels /wheels
+COPY --from=builder /app/requirements.txt .
+
+RUN pip install --no-cache /wheels/*
 
 COPY ./etl_library ./etl_library
 COPY ./github_library ./github_library
@@ -7,6 +23,4 @@ WORKDIR /etl
 
 COPY ./github_actions_data ./
 
-RUN pip install -r /etl/requirements.txt
-
-CMD python3 /etl/main.py
+CMD ["python3", "/etl/main.py"]
