Fixing small Dockerfile error

--- a/IoT/bme280_temp_sensor/Dockerfile
+++ b/IoT/bme280_temp_sensor/Dockerfile
@@ -24,4 +24,4 @@ WORKDIR /iot_sensors
 
 COPY ./bme280_temp_sensor ./
 
-ENTRYPOINT ["python3" "/iot_sensors/main.py"]
+ENTRYPOINT ["python3", "/iot_sensors/main.py"]
