Dockerfile updates: multi-stage for air, dht22 temp, security updates for the rest

--- a/IoT/air_quality/Dockerfile
+++ b/IoT/air_quality/Dockerfile
@@ -1,11 +1,25 @@
-FROM python:alpine as build
+FROM python:alpine as builder
 
-COPY ./iot_libraries ./iot_libraries 
+WORKDIR /app
+
+COPY ./air_quality/requirements.txt . 
+
+RUN pip install -r requirements.txt
+
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
+
+# Final Stage 
+FROM python:alpine
+
+COPY --from=builder /app/wheels /wheels
+COPY --from=builder /app/requirements.txt .
+
+RUN pip install --no-cache /wheels/*
+
+COPY ./iot_libraries ./iot_libraries
 
 WORKDIR /iot_sensors
 
 COPY ./air_quality ./
 
-RUN pip install -r /iot_sensors/requirements.txt
-
-CMD python3 /iot_sensors/main.py
+ENTRYPOINT ["python3", "/iot_sensors/main.py"]
