Updated base image

--- a/IoT/kasa_devices/plugs/container/Dockerfile
+++ b/IoT/kasa_devices/plugs/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:alpine as build
+FROM python:3.12.2-slim as build
 
 COPY requirements.txt main.py logging_util.py kasa_utilities.py /
 
