--- a/IoT/kasa_smart_plug_mqtt/Dockerfile
+++ b/IoT/kasa_smart_plug_mqtt/Dockerfile
@@ -18,6 +18,6 @@ COPY ./iot_libraries ./iot_libraries
 
 WORKDIR /iot_sensors
 
-COPY COPY ./kasa_smart_plug_mqtt ./
+COPY ./kasa_smart_plug_mqtt ./
 
 ENTRYPOINT ["python3", "/iot_sensors/main.py"]
