--- a/etl_pipelines/rpi_locator/Dockerfile
+++ b/etl_pipelines/rpi_locator/Dockerfile
@@ -1,4 +1,21 @@
-FROM python:alpine as build
+# Build Stage
+
+FROM python:alpine as builder
+
+WORKDIR /app
+
+COPY /rpi_locator/requirements.txt .
+
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
+
+
+# Final Stage 
+FROM python:alpine
+
+COPY --from=builder /app/wheels /wheels
+COPY --from=builder /app/requirements.txt .
+
+RUN pip install --no-cache /wheels/*
 
 COPY ./etl_library ./etl_library
 
@@ -6,6 +23,4 @@ WORKDIR /etl
 
 COPY ./rpi_locator ./
 
-RUN pip install -r /etl/requirements.txt
-
-CMD python3 /etl/main.py
+ENTRYPOINT ["python3", "/etl/main.py"]
