A variety of updates: Dockerfile bases, cleaning up folders, updated Readme for HW monitoring

--- a/etl_pipelines/yield_curve_data_load/Dockerfile
+++ b/etl_pipelines/yield_curve_data_load/Dockerfile
@@ -1,4 +1,19 @@
-FROM python:alpine as build
+FROM python:slim-bookworm as builder
+
+WORKDIR /app
+
+COPY /yield_curve_library/requirements.txt .
+
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
+
+
+FROM python:slim-bookworm
+
+COPY --from=builder /app/wheels /wheels
+COPY --from=builder /app/requirements.txt .
+
+RUN pip install --no-cache /wheels/*
+
 
 COPY ./etl_library ./etl_library
 COPY ./yield_curve_library ./yield_curve_library
@@ -7,6 +22,4 @@ WORKDIR /etl
 
 COPY ./yield_curve_data_load ./
 
-RUN pip install -r /yield_curve_library/requirements.txt
-
-CMD python3 /etl/main.py
+ENTRYPOINT ["python3", "/etl/main.py"]
