--- a/.github/workflows/libre_lepotato_monitoring_image.yaml
+++ b/.github/workflows/libre_lepotato_monitoring_image.yaml
@@ -6,6 +6,7 @@ on:
       - "main"
     paths:
       - "hardware_telemetry/libre_lepotato/*"
+      - "hardware_telemetry/hw_library/*"
 
 jobs:
   docker:
@@ -25,7 +26,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./hardware_telemetry/libre_lepotato/
+          context: ./hardware_telemetry/
           file: ./hardware_telemetry/libre_lepotato/Dockerfile
           platforms: linux/arm64
           push: true
