Updated GH actions - updated path name

--- a/.github/workflows/airquality_novapmsensor_image.yaml
+++ b/.github/workflows/airquality_novapmsensor_image.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - "main"
     paths:
-      - "IoT/air_quality/*"
+      - "IoT/sds011_air_quality_sensor/*"
       - "IoT/iot_libraries/*"
 
 jobs:
