--- a/IoT/dht22_temp_sensor_cpp/platformio.ini
+++ b/IoT/dht22_temp_sensor_cpp/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 framework = arduino
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
+	wnatth3/WiFiManager@^2.0.16-rc.2
+	knolleary/PubSubClient@^2.8
+	mlesniew/PicoMQTT@^0.3.8
 	bblanchon/ArduinoJson@^7.0.4
-	adafruit/Adafruit Unified Sensor@^1.1.14
-	vshymanskyy/Preferences@^2.1.0
