--- a/k3s_kubernetes_deployment_manifests/zigbee2mqtt/ingress.yaml
+++ b/k3s_kubernetes_deployment_manifests/zigbee2mqtt/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-    - host: zigbee.local.markhamslab.com
+    - host: zigbee.local.example.com
       http:
         paths:
           - backend:
