--- a/IoT/plantower_s5003_airquality/plantower_s5_values.yaml
+++ b/IoT/plantower_s5003_airquality/plantower_s5_values.yaml
@@ -21,10 +21,12 @@ spec:
           imagePullPolicy: Always
           resources:
             limits:
-              cpu: 200m
+              cpu: 400m
               memory: 256Mi
             requests:
-              cpu: 100m
+              # never uses this much, but increasing it seems to resolve
+              # occassional throttling on small devices like RPIs
+              cpu: 200m 
               memory: 128Mi
           securityContext:
             allowPrivilegeEscalation: true
@@ -76,13 +78,13 @@ spec:
                   optional: false     
             - name: ALERT_SLEEP
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   key: ALERT_SLEEP
                   name: iot-device-configs
                   optional: false   
             - name: DEVICE_FAILURE_CHANNEL
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   key: DEVICE_FAILURE_CHANNEL
                   name: iot-device-configs
                   optional: false  
